Add room and free cancellation section to hotel info

--- a/src/components/Hotel/Information/Information.module.scss
+++ b/src/components/Hotel/Information/Information.module.scss
@@ -21,3 +21,20 @@
   font-size: 12px;
   color: grey;
 }
+
+.roomContainer {
+  margin-top: 8px;
+}
+
+.room {
+  font-size: 12px;
+  color: red;
+}
+
+.cancellationContainer {
+  margin-top: 16px;
+}
+
+.cancellation {
+  color: green;
+}
