Replace hard-coded data with data.json data

--- a/src/components/Hotel/Information/Information.module.scss
+++ b/src/components/Hotel/Information/Information.module.scss
@@ -24,6 +24,7 @@
 
 .roomContainer {
   margin-top: 8px;
+  height: 21px;
 }
 
 .room {
@@ -33,6 +34,7 @@
 
 .cancellationContainer {
   margin-top: 16px;
+  height: 21px;
 }
 
 .cancellation {
