--- a/src/components/Summary/Summary.module.scss
+++ b/src/components/Summary/Summary.module.scss
@@ -2,4 +2,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.italics {
+  font-style: italic;
 }
